force-app/main/default/objects/Nice_Click_To_Call__mdt/Nice_Click_To_Call__mdt.object-meta.xml
<CustomObject>
    <label>Nice Click To Call</label>
    <pluralLabel>Nice Click To Call</pluralLabel>
</CustomObject>