force-app/main/default/objects/Nice_Click_To_Call__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>Please Provide the field Name</inlineHelpText>
    <label>Field Name</label>
    <metadataRelationshipControllingField>Nice_Click_To_Call__mdt.Object_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Nice_Click_To_Call</relationshipLabel>
    <relationshipName>Nice_Click_To_Call</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>