force-app/main/default/objects/Nice_Click_To_Call__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <inlineHelpText>Please provide the object name</inlineHelpText>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Nice_Click_To_Call</relationshipLabel>
    <relationshipName>Nice_Click_To_Call</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>